// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace utils getProject should return project 1`] = `
{
  "architect": {
    "build": {
      "builder": "@angular-devkit/build-angular:application",
      "configurations": {
        "development": {
          "extractLicenses": false,
          "optimization": false,
          "sourceMap": true,
        },
        "production": {
          "budgets": [
            {
              "maximumError": "3.5mb",
              "maximumWarning": "500kb",
              "type": "initial",
            },
            {
              "maximumError": "4kb",
              "maximumWarning": "2kb",
              "type": "anyComponentStyle",
            },
          ],
          "outputHashing": "all",
        },
      },
      "defaultConfiguration": "production",
      "options": {
        "assets": [
          "src/favicon.ico",
          "src/assets",
        ],
        "browser": "src/main.ts",
        "index": "src/index.html",
        "inlineStyleLanguage": "scss",
        "outputPath": "dist/schematics-test",
        "polyfills": [
          "zone.js",
        ],
        "scripts": [],
        "stylePreprocessorOptions": {
          "includePaths": [
            "node_modules/",
          ],
        },
        "styles": [
          "src/styles.scss",
        ],
        "tsConfig": "tsconfig.app.json",
      },
    },
    "extract-i18n": {
      "builder": "@angular-devkit/build-angular:extract-i18n",
      "options": {
        "buildTarget": "schematics-test:build",
      },
    },
    "serve": {
      "builder": "@angular-devkit/build-angular:dev-server",
      "configurations": {
        "development": {
          "buildTarget": "schematics-test:build:development",
        },
        "production": {
          "buildTarget": "schematics-test:build:production",
        },
      },
      "defaultConfiguration": "development",
    },
    "test": {
      "builder": "@angular-devkit/build-angular:karma",
      "options": {
        "assets": [
          "src/favicon.ico",
          "src/assets",
        ],
        "inlineStyleLanguage": "scss",
        "polyfills": [
          "zone.js",
          "zone.js/testing",
        ],
        "scripts": [],
        "stylePreprocessorOptions": {
          "includePaths": [
            "node_modules/",
          ],
        },
        "styles": [
          "src/styles.scss",
        ],
        "tsConfig": "tsconfig.spec.json",
      },
    },
  },
  "prefix": "app",
  "projectType": "application",
  "root": "",
  "schematics": {
    "@schematics/angular:component": {
      "standalone": false,
      "style": "scss",
    },
    "@schematics/angular:directive": {
      "standalone": false,
    },
    "@schematics/angular:pipe": {
      "standalone": false,
    },
  },
  "sourceRoot": "src",
}
`;

exports[`Workspace utils getProjectTargets should return project targets 1`] = `
{
  "build": {
    "builder": "@angular-devkit/build-angular:application",
    "configurations": {
      "development": {
        "extractLicenses": false,
        "optimization": false,
        "sourceMap": true,
      },
      "production": {
        "budgets": [
          {
            "maximumError": "3.5mb",
            "maximumWarning": "500kb",
            "type": "initial",
          },
          {
            "maximumError": "4kb",
            "maximumWarning": "2kb",
            "type": "anyComponentStyle",
          },
        ],
        "outputHashing": "all",
      },
    },
    "defaultConfiguration": "production",
    "options": {
      "assets": [
        "src/favicon.ico",
        "src/assets",
      ],
      "browser": "src/main.ts",
      "index": "src/index.html",
      "inlineStyleLanguage": "scss",
      "outputPath": "dist/schematics-test",
      "polyfills": [
        "zone.js",
      ],
      "scripts": [],
      "stylePreprocessorOptions": {
        "includePaths": [
          "node_modules/",
        ],
      },
      "styles": [
        "src/styles.scss",
      ],
      "tsConfig": "tsconfig.app.json",
    },
  },
  "extract-i18n": {
    "builder": "@angular-devkit/build-angular:extract-i18n",
    "options": {
      "buildTarget": "schematics-test:build",
    },
  },
  "serve": {
    "builder": "@angular-devkit/build-angular:dev-server",
    "configurations": {
      "development": {
        "buildTarget": "schematics-test:build:development",
      },
      "production": {
        "buildTarget": "schematics-test:build:production",
      },
    },
    "defaultConfiguration": "development",
  },
  "test": {
    "builder": "@angular-devkit/build-angular:karma",
    "options": {
      "assets": [
        "src/favicon.ico",
        "src/assets",
      ],
      "inlineStyleLanguage": "scss",
      "polyfills": [
        "zone.js",
        "zone.js/testing",
      ],
      "scripts": [],
      "stylePreprocessorOptions": {
        "includePaths": [
          "node_modules/",
        ],
      },
      "styles": [
        "src/styles.scss",
      ],
      "tsConfig": "tsconfig.spec.json",
    },
  },
}
`;
